dataset1235/2025-2/1153765216/users/4118477972/executions/2372395858_2011582555.log
== SUBMISSION (2025-08-28 18:23:23)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / (2 * tan (pi(6)))
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ap = l / (2 * tan (pi(6)))
                       ^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ap = l / (2 * tan (pi(6)))
                       ^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ap = l / (2 * tan (pi(6)))
                       ^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ap = l / (2 * tan (pi(6)))
                       ^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ap = l / (2 * tan (pi(6)))
                       ^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ap = l / (2 * tan (pi(6)))
                       ^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:21:15)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / 2 * tan pi / 6
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    ap = l / 2 * tan pi / 6
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    ap = l / 2 * tan pi / 6
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    ap = l / 2 * tan pi / 6
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    ap = l / 2 * tan pi / 6
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    ap = l / 2 * tan pi / 6
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    ap = l / 2 * tan pi / 6
                     ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:23:47)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / (2 * tan (pi / 6))
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o lado:127.31
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o lado:64.95
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o lado:41.57
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o lado:93.53
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o lado:23.38
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o lado:166.28
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:20:17)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / 2 tan pi / 6
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    ap = l / 2 tan pi / 6
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    ap = l / 2 tan pi / 6
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    ap = l / 2 tan pi / 6
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    ap = l / 2 tan pi / 6
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    ap = l / 2 tan pi / 6
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    ap = l / 2 tan pi / 6
               ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:21:34)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / (2 * tan pi / 6)
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi / 6)
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi / 6)
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi / 6)
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi / 6)
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi / 6)
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi / 6)
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:22:19)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / (2 * tan pi(6))
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:19:46)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / (2 tan pi / 6)
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    ap = l / (2 tan pi / 6)
              ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    ap = l / (2 tan pi / 6)
              ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    ap = l / (2 tan pi / 6)
              ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    ap = l / (2 tan pi / 6)
              ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    ap = l / (2 tan pi / 6)
              ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    ap = l / (2 tan pi / 6)
              ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:22:07)
-- CODE: 
from math import *

# faça seu código aqui!
l = float(input("digite o lado:"))
ap = l / (2 * tan pi(6))
a = 3 * l * ap
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 5
    ap = l / (2 * tan pi(6))
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
